--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -69,7 +69,8 @@
       [영리한 베트남 투자]-최근환<br>
       [재무제표 행간을 읽어라]-김대욱<br>
       [내일의 부: 알파편]-조던 김상섭<br>
-      [내일의 부: 오메가편]-조던 김상섭
+      [내일의 부: 오메가편]-조던 김상섭<br>
+      [시장의 기억]-이태호
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
@@ -116,14 +117,12 @@
 
     <p><pre>
       <h2>2020년 4월 독서</h2>
-        <li>경제/경영:</li>
+        <li>경제/경영: [시장의 기억]-이태호</li>
         <li>역사:</li>
         <li>철학:</li>
         <li>심리학/처세술:</li>
         <li>과학:</li>
         <br>
-        <li>사회학:</li>
-        <li>경영:</li>
         <li>소설: [별을 위한 시간]-로버트 A. 하인라인</li>
     </p></pre>
 
