--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -53,6 +53,12 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=URr8Exi8z0c" target="_blank" title="돈파는가게_세상의 모든 재테크">
+      폭락과 급등이 끝나면 나타나는 주식시장의 3단계 순서</a><br>
+
+    <a href="https://www.youtube.com/watch?v=3vVI87Kgr_4" target="_blank" title="자유잍튜브THE">
+      저 PBR 가치주의 반란? 밸류트랩을 조심하자</a><br>
+
     <a href="https://www.youtube.com/watch?v=JH73QgrWePo" target="_blank" title="자유잍튜브THE">
       혼란스러운 주식 시장, 어디에 어떻게 투자하면 좋나?</a><br>
 
