--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -53,11 +53,20 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=dWFbTR0elBI" target="_blank" title="쉬운바둑">
+      화점정석 #11</a><br>
+
+    <a href="https://www.youtube.com/watch?v=ytjguQvPkfs" target="_blank" title="세이브">
+      EVE Online - Advanced Military Career Mission</a><br>
+
+    <a href="https://www.youtube.com/watch?v=6ySZe7_Eizg" target="_blank" title="쉬운바둑">
+      화점정석 #10</a><br>
+
     <a href="https://www.youtube.com/watch?v=1JB0iqMObss" target="_blank" title="쉬운바둑">
       [3단젖힘 결과] 누가 손해일까?</a><br>
 
     <a href="https://www.youtube.com/watch?v=NTzekOzvp9U" target="_blank" title="쉬운바둑">
-      [ 삼삼침투 정석 ] 흑이 막기 위해선 조건이 있습니다</a><br>
+      [삼삼침투 정석] 흑이 막기 위해선 조건이 있습니다</a><br>
 
     <a href="https://www.youtube.com/watch?v=gJSvFM7aGuw" target="_blank" title="세이브">
       EVE Online - Industry Career Mission</a><br>
