--- a/The_economist.html
+++ b/The_economist.html
@@ -51,7 +51,35 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=VqKylpH7tuA" target="_blank" title="내일은 투자왕 - 김단테">
+    경기침체 시작인가요? 30년(?)만에 아침방송에 출연한 경제대통령 제롬파월의 대답은?</a><br>
 
+  <a href="https://www.youtube.com/watch?v=266hoXFynGM" title="삼프로TV_경제의신과함께">
+    Fed와 시장의 동상이몽에 주목하라 (f.오건영)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xjslR1l4k9Q" target="_blank" title="JD부자연구소">
+    8거래일 상승이 올까</a><br>
+
+  <a href="https://www.youtube.com/watch?v=S53-3oyOaNY" target="_blank" title="더나은삶TV">
+    한국이 미국에게 정말로 중요할까?! (미국의 인도-태평양 전략 알아보기)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=UZyvJOzDceE" title="삼프로TV_경제의신과함께">
+    아마존, 코로나19 특수에 7만5천명 추가 고용</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Wfyp5Ryfnlk" title="삼프로TV_경제의신과함께">
+    실물 경기지표 악화, 갈리는 전문가들의 의견</a><br>
+
+  <a href="https://www.youtube.com/watch?v=l7JJcMm97WY" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    공포의 오일전쟁 미국셰일가스 줄도산, 트럼프가 웃는 이유는?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=wTsjKDcUQfA" target="_blank" title="에버그린 Evergreen">
+    모두가 주식에 열광하는 사이, 그들은 새로운 투자 패러다임을 만들어 가고 있다. (비트코인, 디지털 자산)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=rozBqrvAo_8" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    2차,3차,N차...충격이 온다._LG보고서(맥킨지, 골드만삭스 등 요약)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=XtxF5-Yit9E" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    세계적인 투자자 레이달리오는 왜 한국주식을 팔았을까?</a><br>
 
   <a href="https://www.youtube.com/watch?v=inXBXUp-iHA" target="_blank" title="자유잍튜브THE">
     판데믹과 고삐풀린 돈. 새로운 시대는 어떻게 열릴까?</a><br>
