--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -90,7 +90,8 @@
     <h3><strong>처세술</h3></strong>
       [침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅<br>
-      [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤
+      [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
+      [승자의 결단과 전략, 오륜서]-마야모토 무사시
     <h3><strong>과학</h3></strong>
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
       [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
@@ -106,7 +107,9 @@
       [위대한 개츠비]-스콧 피츠제럴드<br>
       [별을 위한 시간]-로버트 A. 하인라인
     <h3><strong>자기계발</h3></strong>
-      [기획자의 습관]-최장순
+      [기획자의 습관]-최장순<br>
+      [최강 멘탈]-쓰지 유시후미<br>
+      [지친 당신에게 고요를 선물합니다]-팀 콜린스
     <h3><strong>에세이</h3></strong>
       [이창호의 부득탐승]-이창호
     <h3><strong>사회학</h3></strong>
@@ -120,10 +123,12 @@
         <li>경제/경영: [시장의 기억]-이태호</li>
         <li>역사:</li>
         <li>철학:</li>
-        <li>심리학/처세술:</li>
+        <li>심리학/처세술: [승자의 결단과 전략, 오륜서]-마야모토 무사시</li>
         <li>과학:</li>
         <br>
         <li>소설: [별을 위한 시간]-로버트 A. 하인라인</li>
+        <li>자기 계발: [최강 멘탈]-쓰지 유시후미</li>
+        <li>자기 계발: [지친 당신에게 고요를 선물합니다]-팀 콜린스</li>
     </p></pre>
 
     <p><pre>
