--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,7 +51,11 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=GEJ70-gzTMk" target="_blank" title="돈파는가게_세상의 모든 재테크">
+      경제는 엉망인데 주식만 오르는 3가지 이유</a><br>
 
+    <a href="https://www.youtube.com/watch?v=VG_FEbSKMq8" target="_blank" title="삼프로TV_경제의신과함께">
+      미래는 언텍? 컨텍? 주식시장의 선제성을 주목하라</a><br>
 
     <a href="https://www.youtube.com/watch?v=URr8Exi8z0c" target="_blank" title="돈파는가게_세상의 모든 재테크">
       폭락과 급등이 끝나면 나타나는 주식시장의 3단계 순서</a><br>
