--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,17 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=y0NpSoZYDAE" target="_blank" title="쉬운바둑">
+      [함정수?] 하수의 설움.. 또 끼우냐? </a><br>
+
+    <a href="https://www.youtube.com/watch?v=bohanxUe5kE" target="_blank" title="쉬운바둑">
+      화점정석 #13</a><br>
+
+    <a href="https://www.youtube.com/watch?v=IUT5kxYGydI" target="_blank" title="쉬운바둑">
+      세칸협공 양걸침 - 붙임의 올바른 방향은?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=TYS2XmU7_-s" target="_blank" title="쉬운바둑">
+      화점정석 #12</a><br>
 
     <a href="https://www.youtube.com/watch?v=dWFbTR0elBI" target="_blank" title="쉬운바둑">
       화점정석 #11</a><br>
