--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,54 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=QQc7MAm-tpQ&t=1s" target="_blank" title="삼프로TV_경제의신과함께">
+    수니파, 시아파 무려 1400년간 싸우는 이유는? [중세특집#3]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=qX3cBrxPatw" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    아...포퓰리즘</a><br>
+
+  <a href="https://www.youtube.com/watch?v=lMH6tO47lvw" target="_blank" title="자유잍튜브THE">
+    레이달리오의 일침, '현금은 여전히 쓰레기다'. 왜?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=wBeCtPXerP4" target="_blank" title="더나은삶TV">
+    코로나19로 인한 대한민국 산업별 영향 분석</a><br>
+
+  <a href="https://www.youtube.com/watch?v=lJPAF3W5BF0" target="_blank" title="더나은삶TV">
+    김정은 사망시 북한 시나리오 5가지.. 만약 살아있다면 그는 왜 안나타날까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=5Z1Bl0QZyHw" target="_blank" title="채움TV">
+    6년 후 반도체 뛰어넘는 한국을 먹여 살릴 이것!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=npJwcVQcnaY" target="_blank" title="자유잍튜브THE">
+    김정은 이후의 북한, 친미 용한용일 개혁개방 노선으로 갈까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=p2_BzIc07NI" target="_blank" title="JD부자연구소">
+    폭락의 전조인가 일시적 하락인가</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OAMz8F2Fy68" target="_blank" title="삼프로TV_경제의신과함께">
+    아랍주의, 이슬람주의 중동문화의 이해 [중세특집#2]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=G4Ii7Fh-3fs" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    유가패닉 트로이목마가 열렸다.거꾸로 보는 경제와 투자</a><br>
+
+  <a href="https://www.youtube.com/watch?v=sirsgTTY4ss" target="_blank" title="삼프로TV_경제의신과함께">
+    중동은 왜 항상 싸울까? 중동관련뉴스가 이해안가면 꼭 보세요. [중세특집#1]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=XaQnbBpDWAw" target="_blank" title="더나은삶TV">
+    전설적 투자자 코스톨라니가 시장의 타이밍을 잡는 법! </a><br>
+
+  <a href="https://www.youtube.com/watch?v=VkMVbDm7RVE" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    미국에게 물어보자 앞으로 3년 예금일까? 주식일까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=WsJi4CpmExU" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    집값에 대한 가장 솔직한 이야기와 금융권위험분석</a><br>
+
+  <a href="https://www.youtube.com/watch?v=jeGTSfZ6k9o" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    1. 터키 외환위기 터지나? 2. 한국 등 신흥국을 덮치나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ncglze18kF8" target="_blank" title="삼프로TV_경제의신과함께">
+    돌아온 외국인들! 시장은 악재보다 호재에 민감 (f.박제영)</a><br>
+
   <a href="https://www.youtube.com/watch?v=VqKylpH7tuA" target="_blank" title="내일은 투자왕 - 김단테">
     경기침체 시작인가요? 30년(?)만에 아침방송에 출연한 경제대통령 제롬파월의 대답은?</a><br>
 
