--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,12 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=CIa_Kh8E8mw" target="_blank" title="돈파는가게_세상의 모든 재테크">
+      한국도 미국도 주식팔고 채권사는 3가지 이유</a><br>
+
+    <a href="https://www.youtube.com/watch?v=2So_DuWmAAs" target="_blank" title="TRADE ATS">
+      Action Threshold Software Walk-through Video</a><br>
+
     <a href="https://www.youtube.com/watch?v=GEJ70-gzTMk" target="_blank" title="돈파는가게_세상의 모든 재테크">
       경제는 엉망인데 주식만 오르는 3가지 이유</a><br>
 
