--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,13 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=nWsrKVv7Rrc" target="_blank" title="JD부자연구소">
+    미중 신냉전시대의 시작</a><br>
+
+  <a href="https://www.youtube.com/watch?v=FVx976uwibw" target="_blank" title="Change Ground">
+    주가를 보지 말고 일자리를 보라 (폴 크루그먼, 노벨 경제학상 수상자)</a><br>
+
   <a href="https://www.youtube.com/watch?v=QQc7MAm-tpQ&t=1s" target="_blank" title="삼프로TV_경제의신과함께">
     수니파, 시아파 무려 1400년간 싸우는 이유는? [중세특집#3]</a><br>
 
