--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -70,7 +70,10 @@
       [재무제표 행간을 읽어라]-김대욱<br>
       [내일의 부: 알파편]-조던 김상섭<br>
       [내일의 부: 오메가편]-조던 김상섭<br>
-      [시장의 기억]-이태호
+      [시장의 기억]-이태호<br>
+      [코로나 이후의 세계]-제이슨 솅커<br>
+      [디플레 전쟁]-홍춘욱<br>
+      [세상 친절한 경제상식]-토리텔러
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
@@ -118,13 +121,28 @@
 
 
 
+
+
     <p><pre>
-      <h2>2020년 5월 독서</h2>
-        <li>경제/경영:</li>
+      <h2>2020년 6월 독서</h2>
+        <li>경제/경영:[세상 친절한 경제상식]-토리텔러</li>
         <li>역사:</li>
         <li>철학:</li>
         <li>심리학/처세술:</li>
         <li>과학:</li>
+        <br>
+        <li>경제:</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2020년 5월 독서</h2>
+        <li>경제/경영:[코로나 이후의 세계]-제이슨 솅커</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술:</li>
+        <li>과학:</li>
+        <br>
+        <li>경제:[디플레 전쟁]-홍춘욱</li>
     </p></pre>
 
     <p><pre>
