--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,6 +52,13 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=heGiM4nwSDM" target="_blank" title="책갈피">
+      이 책이 당신을 평생 부자로 만드는 이유!! “5단계 공식을 지켜라!”</a><br>
+
+    <a href="https://www.youtube.com/watch?v=egTJZR6miFU" target="_blank" title="더나은삶TV">
+      결국 이기는 사람들만 아는 성공 법칙</a><br>
+
     <a href="https://www.youtube.com/watch?v=y2vjOJxUMas" target="_blank" title="더나은삶TV">
       내향적인 사람이 각성하면 전세계를 씹어먹는 이유</a><br>
 
