--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,22 @@
 
 
 
+
+
+
+
+    <a href="https://www.youtube.com/watch?v=D84wlkC-aI0" target="_blank" title="자유잍튜브THE">
+      지금껏 볼 수 없었던 것들. 과거와 결별이 필요한 시점인가?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Np2Tj7pzVRg" target="_blank" title="자유잍튜브THE">
+      테슬라 주가, 너무 높은데 뭘 보고 사야하나요? 엘론머스크를 생각해본다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=i4E4ybaHzlg" target="_blank" title="JD부자연구소">
+      양적완화의 효과를 누리는 방법</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Ci1hKIHL9VY" target="_blank" title="The Secret Mindset">
+      Most Effective Heikin-Ashi Strategies For Scalping & Day Trading (Ultimate Heiken Ashi Guide)</a><br>
+
     <a href="https://www.youtube.com/watch?v=CIa_Kh8E8mw" target="_blank" title="돈파는가게_세상의 모든 재테크">
       한국도 미국도 주식팔고 채권사는 3가지 이유</a><br>
 
