--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,39 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=zuWgGaMsFZ0" target="_blank" title="쉬운바둑">
+      [함정수] 18급도 안두는 수를? ai가 풀어준 속수 아닌 신수~</a><br>
+
+    <a href="https://www.youtube.com/watch?v=JdmtdEOfuK4" target="_blank" title="쉬운바둑">
+      [화점정석] 어마무시한 묘수가 터지는 한칸협공 붙여뻗기</a><br>
+
+    <a href="https://www.youtube.com/watch?v=yvLvIk9mw5g" target="_blank" title="쉬운바둑">
+      [화점정석] 한칸협공 - 지키는 방법의 차이점</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Uo47E5ZUoJQ" target="_blank" title="쉬운바둑">
+      [화점정석] 삼연성_한칸협공, 백의 세 가지 응수법</a><br>
+
+    <a href="https://www.youtube.com/watch?v=fQ86QGtkpMk" target="_blank" title="쉬운바둑">
+      [화점정석] 한칸협공, 덮어씌우기 4부</a><br>
+
+    <a href="https://www.youtube.com/watch?v=51lik_Z5Gfo" target="_blank" title="쉬운바둑">
+      [화점정석] 한칸협공, 덮어씌우기 3부</a><br>
+
+    <a href="https://www.youtube.com/watch?v=CF7hwsHrCS4" target="_blank" title="쉬운바둑">
+      [화점정석] 한칸협공, 덮어씌우기 2부</a><br>
+
+    <a href="https://www.youtube.com/watch?v=72OdkeIUOZQ" target="_blank" title="쉬운바둑">
+      [화점정석] 한칸협공, 덮어씌우기 1부</a><br>
+
+    <a href="https://www.youtube.com/watch?v=R9HoxHNBT3Y" target="_blank" title="쉬운바둑">
+      [붙여막기정석] 이창호정석 한방에 공부하기</a><br>
+
+    <a href="https://www.youtube.com/watch?v=b_sTYK4Qm0w" target="_blank" title="쉬운바둑">
+      [변칙수] 붙여끊기에 대한 두가지 대처법 - 쉽게, 고급지게</a><br>
+
+    <a href="https://www.youtube.com/watch?v=2E_E1-StAuU" target="_blank" title="쉬운바둑">
+      [함정수] 허접한 수? NO! 모르면 눈앞이 캄캄해질걸요?</a><br>
+
     <a href="https://www.youtube.com/watch?v=y0NpSoZYDAE" target="_blank" title="쉬운바둑">
       [함정수?] 하수의 설움.. 또 끼우냐? </a><br>
 
