--- a/The_economist.html
+++ b/The_economist.html
@@ -52,6 +52,118 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=3LOHj2yjjzM" target="_blank" title="CNBC After Hours">
+    Why people are buying bankrupt stocks like Hertz</a><br>
+
+  <a href="https://www.youtube.com/watch?v=7lRQA4GFMaI" target="_blank" title="삼프로TV_경제의신과함께">
+    투기판 된 우선주, 상한가 10개 중 8개</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xw3s6ED31dk" target="_blank" title="삼프로TV_경제의신과함께">
+    연준 디플레이션 파이터로 정체성 전환</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZSQEtoAc-Wk" target="_blank" title="삼프로TV_경제의신과함께">
+    선물옵션 동시만기와 FOMC 전야의 살얼음판</a><br>
+
+  <a href="https://www.youtube.com/watch?v=gluohkCeCE8" target="_blank" title="삼프로TV_경제의신과함께">
+    나스닥 장중 만 포인트 돌파.. 경계감 고조</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4QHBDIrA_ZU" target="_blank" title="JD부자연구소">
+    이렇게 많이 풀린 돈이 어디로 갈 것인가</a><br>
+
+  <a href="https://www.youtube.com/watch?v=VKglwp5BkZs" target="_blank" title="미주부">
+    내 투자금을 10배로 만들어줄 미국 인공지능 유망회사 10개 집중분석-2부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=MbrVa5GWIKs" target="_blank" title="JD부자연구소">
+    미중 신냉전의 핵심 클라우드</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Wj1975b164g" target="_blank" title="삼프로TV_경제의신과함께">
+    미국 시장 폭등세 그러나 개인의 레버리지 투자는 경계</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9Te6EqSgs0o" target="_blank" title="삼프로TV_경제의신과함께">
+    홍콩사태, 미중패권전쟁의 패러다임을 바꾼다. 홍콩 ELS 어떡해</a><br>
+
+  <a href="https://www.youtube.com/watch?v=0qRKEy9qaRE" target="_blank" title="삼프로TV_경제의신과함께">
+    언택트에 소외됐던 반도체 외인매수 이어지나</a><br>
+
+  <a href="https://www.youtube.com/watch?v=qWgckUjDk7Y" target="_blank" title="삼프로TV_경제의신과함께">
+    유동성 랠리 즐겨야 하나 외화 내빈 장세 될수도</a><br>
+
+  <a href="https://www.youtube.com/watch?v=NgrgpaxBjok" target="_blank" title="삼프로TV_경제의신과함께">
+    중국, 드디어 미국 농산물 수입 중단하나</a><br>
+
+  <a href="https://www.youtube.com/watch?v=VCntKhr6Nio" target="_blank" title="삼프로TV_경제의신과함께">
+    탐욕의 구간 시작? 인버스 가고 레버리지 오고</a><br>
+
+  <a href="https://www.youtube.com/watch?v=TMwFpbJOvnU" target="_blank" title="삼프로TV_경제의신과함께">
+    실종된 美 대선 캠페인.. 트럼프에 유리할까? f.김지윤</a><br>
+
+  <a href="https://www.youtube.com/watch?v=APypQa4Xenk" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    미국은 어쩌다 이 지경이 되었을까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Y16ymzKrS6E" target="_blank" title="삼프로TV_경제의신과함께">
+    금통위 금리 인하.. 새로운 꽃길 열리나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dW5I0clTlq0" target="_blank" title="JD부자연구소">
+    홍콩 국가보안법과 EPN</a><br>
+
+  <a href="https://www.youtube.com/watch?v=SQsLyi2jsz8" target="_blank" title="삼프로TV_경제의신과함께">
+    금리 동결 가능성 높아지나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=s5al7Pp5uVE" target="_blank" title="삼프로TV_경제의신과함께">
+    월마트 베스트바이는 주가가 오르는데 이마트 하이마트는 왜 빠질까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xvGGOi0DGEo" target="_blank" title="삼프로TV_경제의신과함께">
+    미국 시장, 항공주등 올드 이코노미의 귀환</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xvGGOi0DGEo" target="_blank" title="삼프로TV_경제의신과함께">
+    중국 위안화 기습 평가절하로 美에 보복 中</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1Yzu3LssDqc" target="_blank" title="삼프로TV_경제의신과함께">
+    모두가 디플레이션을 걱정할 때, 찾아올 인플레이션</a><br>
+
+  <a href="https://www.youtube.com/watch?v=APypQa4Xenk" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    앞으로는 임대소득, 정말 위험하다!_원인과 대안을 찾아보자</a><br>
+
+  <a href="https://www.youtube.com/watch?v=YoTNz75pIUs" target="_blank" title="삼프로TV_경제의신과함께">
+    폭락한 홍콩 증시 영향권에 든 코스피</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4W9EL354B0M" target="_blank" title="내일은 투자왕 - 김단테">
+    ‘리틀 버핏’ 빌애크먼이 코로나에 긍정적?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Pd_Y_-xV3ls" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    누가 진실일까요? 더 오른다는 사람 VS 위험하다는 사람</a><br>
+
+  <a href="https://www.youtube.com/watch?v=fWj1MOjtefQ" target="_blank" title="삼프로TV_경제의신과함께">
+    화웨이의 목을 죄는 미국, 국내시장에는 어떤 영향을 미칠 것인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xgt-FKrm-4U" target="_blank" title="자유잍튜브THE">
+    한국 시장의 미래, 주인공은 누구일까? 가치투자를 재정의 하라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=WS5UpHamdWc" target="_blank" title="자유잍튜브THE">
+    2차 미중 무역전쟁과 투자 전략. 관전 포인트는?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=zQJdygbugj8" target="_blank" title="삼프로TV_경제의신과함께">
+    향후 주식시장은 중국의 성장률에 달렸다 f.오건영</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Nk5OeNI335o" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    은행거래주의보 발령!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=thY7KMn3HEI" target="_blank" title="삼프로TV_경제의신과함께">
+    삼성 SK, 반도체 사업에 찬물 뿌리는 미국의 '화웨이 죽이기'</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Qdqz2YG_0nU" target="_blank" title="JD부자연구소">
+    미중신냉전과 삼성전자의 선택</a><br>
+
+  <a href="https://www.youtube.com/watch?v=D38C3ufImzg" target="_blank" title="삼프로TV_경제의신과함께">
+    왜 트럼프는 마이너스 금리를 원하는가? f. 오건영</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RiK_IqAaPmM" target="_blank" title="더나은삶TV">
+    코로나 이후 자본주의와 부의 미래, 노벨경제학상 수상자의 통찰력 있는 생각은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=LX28nWXU9z0" target="_blank" title="삼프로TV_경제의신과함께">
+    코로나19에서 미·중 무역전쟁으로 증시의 프레임이 바뀐다</a><br>
+
   <a href="https://www.youtube.com/watch?v=nWsrKVv7Rrc" target="_blank" title="JD부자연구소">
     미중 신냉전시대의 시작</a><br>
 
