--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -50,14 +50,72 @@
     <h1 style="text-align:center">懲毖錄</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
+  <br>
 
 
 
 
 
-    <a href="https://www.youtube.com/watch?v=Rrtlf7u9bew" title="별별역사">
-      3만으로 56만 대군을 궤멸시킨 전투, 항우의 팽성 대전</a><br>
 
+  <a href="https://www.youtube.com/watch?v=I_wSPpwSOFk" title="tvN 인사이트">
+    발해가 우리 역사인 근거</a><br>
+
+  <a href="https://www.youtube.com/watch?v=t2iLyImpQTE" title="별별역사">
+    몽골제국의 유럽 침공(2) 러시아 정벌 [몽골의 역사]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-RS4yaufAwg" title="별별역사">
+    몽골제국의 유럽 침공(1) 유럽 침공의 서막(칼가 강 전투) [몽골의 역사]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=YEVjOwuWSmA" title="별별역사">
+    한나라의 흉노 정벌기(1) : 천하를 통일한 유방, 그러나</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dIkdts1qKcw" title="와빌">
+    [북유럽 신화] #6 격돌! 토르 vs 요르문간드</a><br>
+
+  <a href="https://www.youtube.com/watch?v=UbxivPaOzm4" title="와빌">
+    [북유럽 신화] #5 토르의 패배 & 악연의 시작</a><br>
+
+  <a href="https://www.youtube.com/watch?v=0tbiKrzYN-0" title="와빌">
+    [북유럽 신화] #4 여자가 된 토르 | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=jNpyOjAh9Sk" title="와빌">
+    [북유럽 신화] #3 묠니르의 탄생 & 로키의 세 아이 | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=yhdW3DniOnk" title="와빌">
+    [북유럽 신화] #2 성벽 쌓는 거인과 로키 | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=L7dnDYLkvOk" title="와빌">
+    [북유럽 신화] #1 천지창조 & 신들의 전쟁 | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=jyJfk8cYEjo" title="와빌">
+    [이집트 신화] #최종화 | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=MI5XTypgL8o" title="와빌">
+    [이집트 신화] #6 통수의 통수의 통수! | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=vKxhW6nrF_I" title="와빌">
+    [이집트 신화] #5 ♥♥ 세트 ♥ 호루스 ♥♥ | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Vhm-_RkM-7w" title="와빌">
+    [이집트 신화] #4 세트 vs 호루스, 왕권 재판 | 그재무지 시리즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=egfQbMKjF3g" title="쏨작가의지식사전">
+    [조선왕조실록] 10분순삭 조선이야기 l 최고령임금 '1대 태조' & 처세술의 신 '2대 정종'</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9T9K5KyHUhY" title="쏨작가의지식사전">
+    [5000 years of Chinese history] History of China in 10 Minutes</a><br>
+
+  <a href="https://www.youtube.com/watch?v=YMlwIIyzVBk" title="쏨작가의지식사전">
+    [영국 역사 요약] 👑영국 역사 꿀잼 10분 총정리(NEW) l 고대,중세,현대</a><br>
+
+  <a href="https://www.youtube.com/watch?v=tuJCxkN0Lao" title="쏨작가의지식사전">
+    [인도 역사 요약] 수학과 수행자의 나라, 인도 역사 15분 꿀잼 총정리(NEW) l 고대~현대</a><br>
+
+  <a href="https://www.youtube.com/watch?v=0QOp0IrMpI4" title="별별역사">
+    황제 유방과 국사무쌍 한신</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Rrtlf7u9bew" title="별별역사">
+    3만으로 56만 대군을 궤멸시킨 전투, 항우의 팽성 대전</a><br><br>
 
 
     [Fabruary 12th, 2020]
