--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -53,7 +53,26 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=8xmYJLUYLw4" target="_blank" title="미국주식으로 부자되기-미주부">
+      내 투자금을 10배로 만들어줄 미국 인공지능 유망회사 10개 집중분석-4부(ft. 바이두, 텐센트)</a><br>
 
+    <a href="https://www.youtube.com/watch?v=-5Gg9eBpr2Y" target="_blank" title="자유잍튜브THE">
+      가난할 수록, 평범할 수록 더욱 치열해야한다. 그런데 현실은?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=IUG3jrJs3Ng" target="_blank" title="뉴욕 네사NESSA NOH">
+      [미국주식] 패턴 읽는 법 5분만에 배우기! PROFIT!!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=FOEEXXPQfxY" target="_blank" title="뉴욕 네사NESSA NOH">
+      옵션거래란 뭔가요? 초보자들 드루와~</a><br>
+
+    <a href="https://www.youtube.com/watch?v=VLvZNtl_LPk" target="_blank" title="뉴욕 네사NESSA NOH">
+      [미국주식] 하락할 때 잡는 기회 딥 바잉 (DIP BUYING)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=YAIdKAvJakU" target="_blank" title="뉴욕 네사NESSA NOH">
+      [미국주식] 하락장이 더 지속될 수도 있는 5가지 이유</a><br>
+
+    <a href="https://www.youtube.com/watch?v=skZFWoINflQ" target="_blank" title="JD부자연구소">
+      나스닥 5% 폭락</a><br>
 
     <a href="https://www.youtube.com/watch?v=D84wlkC-aI0" target="_blank" title="자유잍튜브THE">
       지금껏 볼 수 없었던 것들. 과거와 결별이 필요한 시점인가?</a><br>
