--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,17 @@
 
 
 
+
+
+    <a href="https://www.youtube.com/watch?v=7D6O0NeSKOg" target="_blank" title="쉬운바둑">
+      [화점정석] 높은양걸침의 모든것~ 하수의 시선으로 공부하기(바둑강좌)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=o_ENoa7FKd4" target="_blank" title="쉬운바둑">
+      [함정수] 옆구리를 이렇게? (한방에 끝내버리자)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=KRCpvA3hIdE" target="_blank" title="쉬운바둑">
+      [함정수] 삼삼침입 - 가장 간단한 응수방법 (바둑강좌)</a><br>
+
     <a href="https://www.youtube.com/watch?v=zuWgGaMsFZ0" target="_blank" title="쉬운바둑">
       [함정수] 18급도 안두는 수를? ai가 풀어준 속수 아닌 신수~</a><br>
 
