--- a/The_economist.html
+++ b/The_economist.html
@@ -53,6 +53,34 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=pbMDm1-axeg" target="_blank" title="삼프로TV_경제의신과함께">
+    이렇게 오를걸 어제는 왜 내렸나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=rQj000kQfzk" target="_blank" title="삼프로TV_경제의신과함께">
+    2023년부터 모든 주식에 양도세 물린다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=qkk42_SV0Bo" target="_blank" title="삼프로TV_경제의신과함께">
+    미국 큰형님 Fed 등판, 한국은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZuM8SMAqZtM" target="_blank" title="JD부자연구소">
+    확실하게 부자가 되는 두 가지 방법</a><br>
+
+  <a href="https://www.youtube.com/watch?v=7zic8kWOIvE" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    N차 폭락의 시작? 아니면 단기조정?_조성연소장(펀펀한 투자연구소)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=HGzz7lpQxkE" target="_blank" title="슈카월드">
+    대규모 AI모델, 마이크로소프트가 꿈꾸는 세계</a><br>
+
+  <a href="https://www.youtube.com/watch?v=fh2wAiDVjLs" target="_blank" title="삼프로TV_경제의신과함께">
+    선방했으나 한발 물러선 낙관론</a><br>
+
+  <a href="https://www.youtube.com/watch?v=c9LGx770oJs" target="_blank" title="삼프로TV_경제의신과함께">
+    의심을 타고 오르는 경기 회복세 f.김효진</a><br>
+
+  <a href="https://www.youtube.com/watch?v=HCVVJZCCRW8" target="_blank" title="삼프로TV_경제의신과함께">
+    FOMC 잘 넘겼지만 만기일 매물 폭탄!</a><br>
+
   <a href="https://www.youtube.com/watch?v=3LOHj2yjjzM" target="_blank" title="CNBC After Hours">
     Why people are buying bankrupt stocks like Hertz</a><br>
 
