--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -56,6 +56,23 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=pPuBqv9yxYs" title="지식한잔">
+    왜 쿠릴 열도는 전부 다 러시아 땅이 된 걸까??</a><br>
+
+  <a href="https://www.youtube.com/watch?v=HQ5kjgIL-B8&t=2s" title="삼프로TV_경제의신과함께">
+    드디어 전쟁의 막이 오르다! 2개월 간의 포클랜드를 둘러싼 다툼, 아르헨티나 5부 [지구본연구소 시즌2 - EP.40]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=uqK1QPGJcJg" title="삼프로TV_경제의신과함께">
+    제국의 역습 : 포클랜드 전쟁의 서막, 아르헨티나 4부 [지구본연구소 시즌2 - EP.39]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=rnzF-4MlnJ0" title="삼프로TV_경제의신과함께">
+    군부독재가 남긴 참혹한 역사 '더러운 전쟁', 아르헨티나 3부 [지구본연구소 시즌2 - EP.38]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=UqRg7TcqIMo" title="삼프로TV_경제의신과함께">
+    왜 그들은 가난해 질 수 밖에 없었을까? 아르헨티나 2부 [지구본연구소 시즌2 - EP.37]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4Mih1tZ-ICk" title="삼프로TV_경제의신과함께">
+    선진국에서 후진국으로? 대표적 백인국가, 아르헨티나 1부 [지구본연구소 시즌2 - EP.36]</a><br>
 
   <a href="https://www.youtube.com/watch?v=I_wSPpwSOFk" title="tvN 인사이트">
     발해가 우리 역사인 근거</a><br>
