--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -73,7 +73,8 @@
       [시장의 기억]-이태호<br>
       [코로나 이후의 세계]-제이슨 솅커<br>
       [디플레 전쟁]-홍춘욱<br>
-      [세상 친절한 경제상식]-토리텔러
+      [세상 친절한 경제상식]-토리텔러<br>
+      경제:[머니]-롭 무어
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
@@ -131,7 +132,7 @@
         <li>심리학/처세술:</li>
         <li>과학:</li>
         <br>
-        <li>경제:</li>
+        <li>경제:[머니]-롭 무어</li>
     </p></pre>
 
     <p><pre>
