--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -74,14 +74,17 @@
       [코로나 이후의 세계]-제이슨 솅커<br>
       [디플레 전쟁]-홍춘욱<br>
       [세상 친절한 경제상식]-토리텔러<br>
-      경제:[머니]-롭 무어
+      [머니]-롭 무어<br>
+      [돈의 속성]-김승호<br>
+      [해외 ETF 백과사전]-김태현
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
       [알렉산드로스 제국의 눈물]-제임스 롬<br>
       [하멜표류기]-헨드릭 하멜<br>
       [하룻밤에 읽는 한국 근현대사]-최용범<br>
-      [세상에서 가장 쉬운 세계사]-천레이
+      [세상에서 가장 쉬운 세계사]-천레이<br>
+      [하룻밤에 읽는 한국사]-최용범
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
@@ -95,7 +98,8 @@
       [침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅<br>
       [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
-      [승자의 결단과 전략, 오륜서]-마야모토 무사시
+      [승자의 결단과 전략, 오륜서]-마야모토 무사시<br>
+      [제갈량문집]-제갈량
     <h3><strong>과학</h3></strong>
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
       [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
@@ -116,8 +120,9 @@
       [지친 당신에게 고요를 선물합니다]-팀 콜린스
     <h3><strong>에세이</h3></strong>
       [이창호의 부득탐승]-이창호
-    <h3><strong>사회학</h3></strong>
-      [재미란 무엇인가?]-벤 핀첨
+    <h3><strong>사회</h3></strong>
+      [재미란 무엇인가?]-벤 핀첨<br>
+      [협력의 역설]-애덤 카헤인
     </p></pre>
 
 
@@ -127,12 +132,15 @@
     <p><pre>
       <h2>2020년 6월 독서</h2>
         <li>경제/경영:[세상 친절한 경제상식]-토리텔러</li>
-        <li>역사:</li>
+        <li>역사:[하룻밤에 읽는 한국사]-최용범</li>
         <li>철학:</li>
-        <li>심리학/처세술:</li>
+        <li>심리학/처세술:[제갈량문집]-제갈량</li>
         <li>과학:</li>
         <br>
         <li>경제:[머니]-롭 무어</li>
+        <li>경제:[돈의 속성]-김승호</li>
+        <li>경제:[해외 ETF 백과사전]-김태현</li>
+        <li>사회:[협력의 역설]-애덤 카헤인</li>
     </p></pre>
 
     <p><pre>
