--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -53,6 +53,12 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=Mda9mjI42cg" target="_blank" title="책그림">
+      말 한마디로 연봉 5천에서 1억으로 올리는 법 | 억대 연봉자만 아는 대화법</a><br>
+
+    <a href="https://www.youtube.com/watch?v=f2nA6SGpBk8" target="_blank" title="책갈피">
+      자신을 이기는 자가 최후의 승자가 된다(사마의)</a><br>
+
     <a href="https://www.youtube.com/watch?v=heGiM4nwSDM" target="_blank" title="책갈피">
       이 책이 당신을 평생 부자로 만드는 이유!! “5단계 공식을 지켜라!”</a><br>
 
