--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,7 +51,8 @@
 
 
 
-
+    <a href="https://www.youtube.com/watch?v=d8X1LNJjIqM" target="_blank" title="뉴욕 네사NESSA NOH">
+      미국주식, 재구성 전 5,000만원 포트폴리오 공개 - WEBULL 위불 앱
 
     <a href="https://www.youtube.com/watch?v=8xmYJLUYLw4" target="_blank" title="미국주식으로 부자되기-미주부">
       내 투자금을 10배로 만들어줄 미국 인공지능 유망회사 10개 집중분석-4부(ft. 바이두, 텐센트)</a><br>
