--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -53,6 +53,20 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=VpEVeKVHg_o" target="_blank" title="쉬운바둑">
+      (사활문제) #99</a><br>
+
+    <a href="https://www.youtube.com/watch?v=B9sIu-8WeUQ" target="_blank" title="쉬운바둑">
+      (사활문제) #97</a><br>
+
+    <a href="https://www.youtube.com/user/TheMylove1244/videos" target="_blank" title="쉬운바둑">
+      (사활문제) #95</a><br>
+
+    <a href="https://www.youtube.com/watch?v=YioLC3T4xlk" target="_blank" title="쉬운바둑">
+      (사활문제 #91) 8궁도형태, 빅으로 살기 정답은 두개!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=TnxzswOuBcU" target="_blank" title="쉬운바둑">
+      한칸뛰면 큰일남..약점투성이~</a><br>
 
     <a href="https://www.youtube.com/watch?v=7D6O0NeSKOg" target="_blank" title="쉬운바둑">
       [화점정석] 높은양걸침의 모든것~ 하수의 시선으로 공부하기(바둑강좌)</a><br>
