--- a/The_economist.html
+++ b/The_economist.html
@@ -54,6 +54,73 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=ZqYOys6rWek" target="_blank" title="삼프로TV_경제의신과함께">
+    주식 양도세 개편에 대한 김프로의 고언</a><br>
+
+  <a href="https://www.youtube.com/watch?v=rPsPFrzreJ4" target="_blank" title="JD부자연구소">
+    유동성 장세에 어느기업에 투자해야 할까</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OmbQbAYgLps" target="_blank" title="삼프로TV_경제의신과함께">
+    다음 주 발표될 경제지표에 주목하라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=T_Wi3pSWwqk" target="_blank" title="자유잍튜브THE">
+    미친 돈 풀기 그 너머, 하이퍼 인플레이션을 준비하라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=AEGDo6qsqho" target="_blank" title="삼프로TV_경제의신과함께">
+    폭풍전야의 경제와 투자...두려움의 실체를 알면 기회로 만들 수 있다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=i5MeRpF2oJw" target="_blank" title="삼프로TV_경제의신과함께">
+    하반기 초반은 현금이 필요한 시점이다 f.김형렬</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xC0XxsfTADU" target="_blank" title="자유잍튜브THE">
+    시장에서는 무엇이 좋은 성과를 만들어 내는가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RIEYEeA3azw" target="_blank" title="삼프로TV_경제의신과함께">
+    애플의 CPU 자체 생산.. 삼성전자에겐 기회다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=kjU-HEDmbgo" target="_blank" title="삼프로TV_경제의신과함께">
+    정보의 홍수 속 우리는 필터버블을 경계해야한다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=owes4yAcVIA" target="_blank" title="삼프로TV_경제의신과함께">
+    SK바이오팜 공모주 청약 첫날 62:1 기록</a><br>
+
+  <a href="https://www.youtube.com/watch?v=iYPKZBOql_A" target="_blank" title="자유잍튜브THE">
+    주식을 팔아야할 이유는 많다. 소음과 신호를 구분하라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=zw8vznHIjy0" target="_blank" title="JD부자연구소">
+    양적완화로 풀린 돈이 어디로 갈까</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1sHzrIW7FxE" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    7월 위기설!!! 돈으로 덮었던 경기회복의 실체가 드러난다! 조성연소장(펀펀한 투자연구소)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=j8EDxb3G980" target="_blank" title="삼프로TV_경제의신과함께">
+    코리아 디스카운트의 원인은 지배구조? f.김학균</a><br>
+
+  <a href="https://www.youtube.com/watch?v=CJouw2OJbJU" target="_blank" title="삼프로TV_경제의신과함께">
+    조정 국면 들어온 증시.. 그래도 시장의 축은 언택트다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-mQ-xddrqW0" target="_blank" title="삼프로TV_경제의신과함께">
+    GDP의 6%, '지재생투'에 주목하라 f.김효진</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ryCNm5kzHVU" target="_blank" title="삼프로TV_경제의신과함께">
+    연준의 유동성 공급 정책은 더 과감해지기 어려운가? f.오건영</a><br>
+
+  <a href="https://www.youtube.com/watch?v=6QNc4gg0e1I" target="_blank" title="삼프로TV_경제의신과함께">
+    연준만 바라보는 주식시장.. 그렇다면 연준의 생각은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=799DoWBgVOw" target="_blank" title="삼프로TV_경제의신과함께">
+    정말 주택시장을 안정시키려면 주식시장으로 돈의 물고를 터라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=IgXZtQDk11Q" target="_blank" title="삼프로TV_경제의신과함께">
+    6.17 부동산 대책의 1차 타겟은 법인 부동산 투자다 f.채상욱</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1EvyIFytEg0" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    앞으로 3년, 경끼들린 경제! 발작과 발작의 연속! 어쩌면 평생의 마지막 기회!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=sV8gtOpbVL0" target="_blank" title="자유잍튜브THE">
+    시장의 주도주가 바뀔까? 시장은 누가 이끄는가?</a><br>
+
   <a href="https://www.youtube.com/watch?v=pbMDm1-axeg" target="_blank" title="삼프로TV_경제의신과함께">
     이렇게 오를걸 어제는 왜 내렸나?</a><br>
 
