--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -56,6 +56,25 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=6Icexl3m-rs" title="별별역사">
+    막장이었던 임진왜란 70년 전 명나라 [중국의 역사]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OFrW0hqqLcQ" title="쏨작가의지식사전">
+    [독일 역사 요약] (NEW)외유내강의 나라! 독일 역사 15분 총정리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=YwvIBJiQ9yQ" title="삼프로TV_경제의신과함께">
+    9번째 위기를 맞은 프로 부도국, 파산의 역사! 아르헨티나 6부 최종화 [지구본연구소 시즌2 - EP.41]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=SZJqesEB6Wg" target="_blank" title="써에이스쇼">
+    정사 삼국지 총정리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=e5tYoqZ5M6Q" target="_blank" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지</a><br>
+
+  <a href="https://www.youtube.com/watch?v=kg8Koo6rDSI" target="_blank" title="지식한잔">
+    소련이 초강대국이 된 진짜 이유!!</a><br>
+
   <a href="https://www.youtube.com/watch?v=pPuBqv9yxYs" title="지식한잔">
     왜 쿠릴 열도는 전부 다 러시아 땅이 된 걸까??</a><br>
 
